--- a/trunk/Navi-X BOXEE/beta/com.navix.main/source/data/settings/settings_default.json
+++ b/trunk/Navi-X BOXEE/beta/com.navix.main/source/data/settings/settings_default.json
@@ -60,7 +60,7 @@
    "search_setting_type": "All", 
    "url_download_location": "not set", 
    "url_max_bandwidth": 0, 
-   "url_navi_server": "http://navix.turner3d.net", 
+   "url_navi_server": "http://www.navixtreme.com", 
    "url_open_timeout": 8, 
    "url_useragent": "Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.0.4) Gecko/2008102920 Firefox/3.0.4"
 }
